fixing first row of tweet card alignment

--- a/client/src/components/TweetCard.css
+++ b/client/src/components/TweetCard.css
@@ -17,16 +17,27 @@
 .row {
   display: flex;
   justify-content: center;
+  /* justify-content: flex-start; */
   flex-wrap: wrap;
+  flex-basis: content;
+  /* padding-left: 5px; */
 }
+
+/* .image-container {
+  justify-content: flex-start;
+} */
+
 .image-container img {
   border-radius: 50%;
-  /* width: 50px;
-  height: 50px; */
   max-width: 100%;
   height: auto;
-  margin: 10px 5px 0 20px;
+  /* margin: 10px 5px 0 20px; */
+  margin-left: 10px;
 }
+
+/* .card-title {
+  text-align: center;
+} */
 
 /* .card-body {
   display: flex;
@@ -60,10 +71,12 @@ p.card-text {
   flex-wrap: wrap;
 } */
 
-/* .name {
-  font-weight: bold;
-  margin-bottom: 2px;
-} */
+.name {
+  /* font-weight: bold;
+  margin-bottom: 2px; */
+  /* padding-left: 5px; */
+  /* justify-content: flex-start; */
+}
 
 .username {
   margin-left: 0.5rem;
